# ouiche

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README  configure
src/: app.cc  compact-radix-trie.hh  compiler.cc  damerau-levenshtein.hh  radix-trie.hh  trie.hh
subject/: subject.txt
subject/ref/: TextMiningApp  TextMiningCompiler
test/: deserialize-print.cc  deserialize.cc  easy.txt  example-dl.cc  print.cc  serialize.cc  test.sh  tool-deserialize-print.cc  tool-deserialize.cc  unit.cc
test/output/: easy-expected.dot
